<resources>
    <string name="app_name">RSS Widget</string>
    <string name="default_content_description">image</string>
    <string name="settings_activity_actionbar_title">Настройки</string>

    <string name="widget_caption">Сводка новостей</string>
    <string name="widget_previous_button_title">назад</string>
    <string name="widget_next_button_title">дальше</string>
    <string name="widget_hide_button_title">скрыть</string>
    <string name="widget_settings_button_title">настройки</string>
    <string name="widget_news_list_empty">Список новостей пуст</string>

    <string name="settings_activity_hint_rss_resource">Адрес ресурса</string>
    <string name="settings_activity_button_commit_title">Применить</string>
    <string name="settings_activity_spinner_caption">Показывать новости за: (час)</string>
    <string name="settings_activity_button_clear_black_list_title"><u>Очистить все</u></string>
    <string name="settings_activity_rv_black_list_news">Список скрытых новостей:</string>
    <string name="settings_activity_invalid_format_url">Неверный формат URL</string>
    <string name="settings_activity_empty_enter">Пустой ввод</string>
    <string name="settings_activity_unidentified_error">Неопознанная ошибка</string>
    <string name="settings_activity_remote_resource_not_rss_service">Ресурс не является rss сервисом</string>
    <string name="settings_activity_connection_error">Ошибка подключения</string>
    <string name="settings_activity_server_error">Ошибка на стороне сервиса</string>

    <string name="placeholder_string_tab_text">\t%s</string>
    <string name="placeholder_string_tab_number_text">\t%d. %s</string>

    <string-array name="settings_spinner_housekeeper_time_hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
    </string-array>

    <string name="sample_pub_date">12 августа 2018</string>
    <string name="sample_title">\tТаксист высадил пассажирок посреди дороги за громкий разговор</string>
    <string name="sample_description">\tВ Таиланде таксист высадил пассажирок на половине пути, потому что устал от пробок и их громкого разговора. Когда одна из девушек спросила его, почему он так поступил, он ответил, что ему лень везти их дальше. Деньги мужчина возвращать отказался. В итоге таксиста оштрафовали на три тысячи батов (6,2 тысячи рублей).</string>

</resources>
