<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_widget_layout"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_view_caption_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_caption" />

            <TextView
                android:id="@+id/tv_news_pub_date"
                style="@style/text_view_pubDate_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                tools:text="@string/sample_pub_date" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_hide"
                style="@style/ButtonHideStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/widget_hide_button_title" />

            <ImageButton
                android:id="@+id/button_settings"
                style="@style/ButtonSettingsStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/widget_settings_button_title" />

        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_news_title"
        style="@style/text_view_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/sample_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="7">

        <TextView
            android:id="@+id/tv_news_description"
            style="@style/text_view_description_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            tools:text="@string/sample_description" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_previous"
                style="@style/ButtonPreviousStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/widget_previous_button_title" />

            <ImageButton
                android:id="@+id/button_next"
                style="@style/ButtonNextStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/widget_next_button_title" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>